@@ -2,10 +2,10 @@
 // $Id$
 
 /**
- * @file advf-author-pane.tpl.php
- * Theme implementation to display information about the post author.
+ * @file author-pane.tpl.php
+ * Theme implementation to display information about a particular user (author).
  *
-  * Available variables (core modules):
+ * Available variables (core modules):
  * - $account: The entire user object for the author.
  * - $picture: Themed user picture for the author.
  * - $account_name: Themed user name for the author.
@@ -31,7 +31,12 @@
  * - $buddylist: Linked icon.
  * - $buddylist_link: Linked translated text "Add to buddylist" or "Remove from buddylist".
 
+ * - $user_relationship_api: Linked icon.
+ * - $user_relationship_api_link: Linked text "Add to <relationship>" or "Remove from <relationship>".
+
  * - $facebook_status: Status from the facebook status module.
+ *
+ * - $fasttoggle_block_author: Block / unblock author.
  *
  * - $privatemsg: Linked icon.
  * - $privatemsg_link: Linked translated text "Send PM".
@@ -45,12 +50,13 @@
  * - $user_stats_ip: IP address from user stats module.
  *
  * - $user_title: Title from user titles module.
+ * 
+ * - $og_groups: Comma delmited list of the author's groups.
 
 */
 ?>
 
-<div class="author-pane-inner">
-
+<div class="author-pane">
   <div class="author-pane-first">
     <div class="author-pane-name-section">
       <div class="author-pane-line author-name"> <?php print $account_name; ?> </div>
@@ -86,6 +92,12 @@
       </div>
     <?php endif; ?>
 
+    <?php if (isset($og_groups)): ?>
+      <div class="author-pane-line author-groups">
+        <span class="author-pane-label"><?php print t('Groups'); ?>:</span> <?php print $og_groups; ?>
+      </div>
+    <?php endif; ?>
+
     <?php if (!empty($user_stats_ip)): ?>
       <div class="author-pane-line author-ip">
         <span class="author-pane-label"><?php print t('IP'); ?>:</span> <?php print $user_stats_ip; ?>
@@ -114,6 +126,10 @@
 
     <?php if (!empty($buddylist)): ?>
       <div class="author-pane-icon"><?php print $buddylist; ?></div>
+    <?php endif; ?>
+
+    <?php if (!empty($user_relationships_api)): ?>
+      <div class="author-pane-icon"><?php print $user_relationships_api; ?></div>
     <?php endif; ?>
   </div>
 </div>
