@@ -14,6 +14,7 @@
  * - $forums: The forums to display (as processed by forum-list.tpl.php)
  * - $topics: The topics to display (as processed by forum-topic-list.tpl.php)
  * - $forums_defined: A flag to indicate that the forums are configured.
+ * - $forum_description: The forum's taxonomy term description, if any.
  *
  * @see template_preprocess_forums()
  * @see advanced_forum_preprocess_forums()
@@ -23,9 +24,11 @@
 <?php if ($forums_defined): ?>
 <div id="forum">
 
+  <?php if ($forum_description): ?>
   <div class="forum-description">
-  <?php print $forum_description ?>
+    <?php print $forum_description; ?>
   </div>
+  <?php endif; ?>
 
   <div class="forum-top-links"><?php print theme('links', $links, array('class' => 'links forum-links')); ?></div>
   <?php print $forums; ?>
